
Deferred Whishlist:
---------------------
* icons for SuRuns context menu entries
* Intercept CreateProcessAsUser in services and check for programs started 
  with limited rights that need to be started as admin

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------
* FIX: Saving Passwords failed in Windows 2000
* CHG: command lines with "://" before the first " " are ignored by the hooks

SuRun 1.2.1.1b7 - 2013-02-24
----------------------------
* FIX: SuRun's 23Bit IAT-Hook GPF'd in 32Bit Office Help viewer on x64 Win7

SuRun 1.2.1.1b6 - 2013-01-05
----------------------------
* FIX: SuRun's menu item "SuRun: Empty Recycle Bin" was not uninstalled
* FIX: /SWITCHTO did not work in XPx32
* CHG: In Windows Vista and later SuRun leaves UAC "Run as administrator" 
       as it is. This enables <ctrl>+<shift>+<lClick> for pinned programs 
       in Explorer.

SuRun 1.2.1.1b5 - 2012-12-12
----------------------------
* FIX: If you started "SuRun.exe <TypeYourStringHere>/AnyCommand", 
       AnyCommand did have no extension and any of 
       AnyCommand.[lnk|cmd|bat|com|pif] were present in  
       "[HKCU|HKLM]\Software\Microsoft\Windows\CurrentVersion\App Paths" 
       then SuRun asked for AnyCommand.<ext> to be run as Administrator.
       Example: If you installed Defraggler and then started 
       http://www.piriform.com/Defraggler from Explorer, then SuRun asked 
       if you want to launch C:\Program Files\Defraggler\Defraggler64.exe 
       with elevated rights.
* FIX: In any Windows x64 the 32 Bit Hooks started "SuRun32.bin /TestAA" 
       instead of SuRun.exe. This caused SuRun32.bin to block the hooked 
       program for a while and to not elevate the to be started program.
* CHG: Fix for Bug in Online Armor. Online Armor makes any program crash, 
       that is using the Exit Code (~GetCurrentProcessId()).